# nelder-mead

./: LICENSE  README.md  flake.nix  nelder-mead.cabal
src/Math/: NelderMead.hs
src/Math/NelderMead/: Point.hs  Simplex.hs  Unsized.hs
test/: Main.hs
