cabal-version:      3.4
name:               nelder-mead
version:            0.0.0.1
license:            MIT
license-file:       LICENSE
author:             Tom Cumming
maintainer:         mail@tomcumming.co.uk
category:           Math

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions: TypeFamilies, DataKinds, MultiWayIf
    build-depends:    
        base ^>=4.16.4.0,
        semigroupoids,
        sized,
        type-natural,
        vector,
        containers

library
    import:           shared
    exposed-modules:
        Math.NelderMead
        Math.NelderMead.Point
        Math.NelderMead.Simplex
        Math.NelderMead.Unsized
    hs-source-dirs:   src

test-suite nelder-mead-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    nelder-mead
